--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,24 +12,17 @@
 
 .loadingText {
   top: 35vh;
+  text-align: center;
 }
 
-.loadingSpinner {
-  width: 4vh;
-  height: 4vh;
-  border-radius: 50%;
-  border: 1vh solid var(--color1);
-  border-top: 1vh solid var(--color9);
-  margin-top: 2vh;
-  animation: spin 1s linear infinite;
+.errorText {
+  font-size: clamp(8px, 2.2vw, 50px);
 }
 
-/* animación para el ícono de carga */
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+.errorTextLight {
+  color: var(--color3);
+}
+
+.errorTextDark {
+  color: var(--color0);
 }
