--- a/src/components/LoginButtons/LoginButtons.module.css
+++ b/src/components/LoginButtons/LoginButtons.module.css
@@ -18,6 +18,8 @@
   background-color: var(--color7);
 }
 
+/**********************|   Estilos de tema   |*******************/
+
 /* Estilos de tema claro */
 .textLight {
   color: var(--color5);
