--- a/src/components/SwitchButton/SwitchButton.module.css
+++ b/src/components/SwitchButton/SwitchButton.module.css
@@ -43,7 +43,7 @@
   font-size: clamp(2px, 1.2vw, 40px);
 }
 
-/* Estilos del tema */
+/**********************|   Estilos de tema   |*******************/
 
 /* Estilos tema claro */
 .mainContainerLight {
