--- a/src/components/CategoriesSection/CategoriesSection.module.css
+++ b/src/components/CategoriesSection/CategoriesSection.module.css
@@ -52,6 +52,8 @@
   margin: 4px 0;
 }
 
+/**********************|   Estilos de tema   |*******************/
+
 /* Estilos tema claro */
 .titleLight {
   color: var(--color5);
@@ -72,6 +74,7 @@
 .indicatorLight {
   color: var(--color6);
 }
+
 /* Estilos tema oscuro */
 .titleDark {
   color: var(--color1);
